--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
   padding: 0;
-  margin: 1rem;
-  background-color: rgba(52, 52, 52, 1);
+  margin: 0;
+  height: 100%;
+  background-color: #E5E5E5;
   font-family: 'IBM Plex Sans', sans-serif;
-  color: #f8f8ff;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,9 +13,67 @@ body {
   box-sizing: border-box;
 }
 
+header {
+  background-color: white;
+  border-radius: 50px;
+  padding: 0.5rem 1rem;
+  margin: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+header h1 {
+  margin: 0;
+}
+
 main {
-  padding: 1rem 2rem;
-  width: 100vw;
+  margin: 2rem;
+  padding-bottom: 5rem; 
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  main {
+    max-width: 70%;
+    margin: 2rem auto;
+  }
+}
+
+section {
+  width: 100%;
+  height: auto;
+  margin: 2rem 0;
+}
+
+section .container {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  flex-direction: row;
+}
+
+section .container img {
+  height: 100%;
+  width: auto;
+  margin-left: 1rem;
+}
+
+section .container img:first-child {
+  margin-left: 0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(52, 52, 52, 1);
+  color: white;
 }
 
 h1 {
@@ -38,6 +97,34 @@ a {
 
 a:hover, a:active, a:focus {
   text-decoration: none;
+}
+
+button {
+  padding: 1rem;
+  margin-left: 0.5rem;
+  background-color: rgba(6, 104, 251, 1);
+  color: white;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 0.9rem;
+  -webkit-border-radius: 2px;
+}
+
+form {
+  display: flex;
+  flex-direction: row;
+}
+
+input[type=search] {
+  padding: 1rem;
+  width: 100%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
 }
 
 .hidden {
