--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,8 @@ section .container {
   width: 100%;
   height: 20vh;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  overflow: hidden;
 }
 
 section .container img {
