--- a/src/index.css
+++ b/src/index.css
@@ -113,26 +113,52 @@ section {
   margin: 2rem 0;
 }
 
+section button {
+  width: 100%;
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  section button {
+    width: auto;
+    margin: 0;
+  }
+}
+
 section .container {
   width: 100%;
-  height: 20vh;
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
 }
 
-section .container img {
-  height: 100%;
-  width: auto;
-  margin-left: 1rem;
+section .container div {
+  width: 100%;
+  height: 15rem;
+  margin-bottom: 2rem;
 }
 
-section .container img:first-child {
-  margin-left: 0;
+@media (min-width: 768px) {
+  section .container div {
+    width: 25%;
+    margin-right: 1rem;
+  }
+}
+
+img {
+  height: auto;
+  width: 100%;
+}
+
+figure {
+  width: 100%;
+  height: 12rem;
+  margin: 0;
+  overflow: hidden;
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 5rem;
@@ -154,8 +180,9 @@ h2 {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 400;
+  margin: 0;
 }
 
 a {
